crates/rome_js_formatter/tests/specs/prettier/js/bind-expressions/unary.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "js\\bind-expressions\\unary.js"
---

# Input

```js
!x::y;
!(x::y /* foo */);
!(/* foo */ x::y);
!(
  /* foo */
  x::y
);
!(
  x::y
  /* foo */
);
!(
  x::y // foo
);
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,14 +1,20 @@
-!x::y;
-!(x::y /* foo */);
-!(/* foo */ x::y);
+!x;
+::y
+!(x
+::y /* foo */)
+!(/* foo */ x
+::y)
 !(
   /* foo */
-  x::y
-);
+  x
+::y
+)
 !(
-  x::y
+  x
+::y
   /* foo */
-);
+)
 !(
-  x::y // foo
-);
+  x
+::y // foo
+)
```

# Output

```js
!x;
::y
!(x
::y /* foo */)
!(/* foo */ x
::y)
!(
  /* foo */
  x
::y
)
!(
  x
::y
  /* foo */
)
!(
  x
::y // foo
)
```


# Errors
```
unary.js:1:3 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ unary.js:1:3
    │
  1 │ !x::y;
    │   ^
  
  i ...Which is required to end this statement
  
    ┌─ unary.js:1:1
    │
  1 │ !x::y;
    │ ^^^
  
unary.js:2:4 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `)` but instead found `:`
  
  × unexpected
  
    ┌─ unary.js:2:4
    │
  2 │ !(x::y /* foo */);
    │    ^
  
unary.js:3:14 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `)` but instead found `:`
  
  × unexpected
  
    ┌─ unary.js:3:14
    │
  3 │ !(/* foo */ x::y);
    │              ^
  
unary.js:6:4 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `)` but instead found `:`
  
  × unexpected
  
    ┌─ unary.js:6:4
    │
  6 │   x::y
    │    ^
  
unary.js:9:4 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `)` but instead found `:`
  
  × unexpected
  
    ┌─ unary.js:9:4
    │
  9 │   x::y
    │    ^
  
unary.js:13:4 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `)` but instead found `:`
  
  × unexpected
  
     ┌─ unary.js:13:4
     │
  13 │   x::y // foo
     │    ^
  

```


